static/core/css/wikivinci.css
/****FOUNDATIONAL STUFF****/

html, body {
	min-height:100%; /*min height is 100% of viewport*/
	height:100%;
	width:100%;
	font-family: 'Roboto', sans-serif;
}

body {
	color:#3c3e43;
}

.main-font {
	color:#3c3e43 !important;
}

.lighter-font {
	color:#6a6a6a !important;
}

.super-light-font {
	color:#909090 !important;	
}

.super-super-light-font {
	color:#C2C2C2 !important;
}

.red-font {
	color:#b94a48 !important;
}

.light-red-font {
	color:#ED4C4C !important;
}

.green-font {
	color:#4ea500 !important;
}

#master-holder {   /*All content sits in this so footer remains at bottom*/
	overflow-x:hidden;	
	-webkit-overflow-scrolling:touch;
	height:100%;
	position:absolute;
	left:0;
	right:0;
	width:100%;
}

#page-content {
	overflow:auto;
	-webkit-overflow-scrolling: touch;
	min-height:100%;
	padding-top:65px;
	padding-bottom:50px;	
	padding-left:0px;
	padding-right:0px;
	width:100%;
}

.overlay {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color:rgba(241, 241, 241, 0.35);
	z-index: 999;
	display:none;
}

.clear-overlay {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color:rgba(241, 241, 241, 0.0);
	z-index: 999;
	display:none;
}

html.ie8 .overlay {
	background-color:#212121;
	filter:alpha(opacity=80);
}

input,
select,
textarea {
	border:1px solid #d9d9d9;
	font-weight:400;
	font-size:14px;
	padding:4px;
	width:100%;
}

textarea {
	max-width:100%;
	max-height:145px;
	height:100%;	
}

input[type='checkbox'],
input[type='radio'] {
	width:initial;
}

input.small,
select.small {
	padding:4px;
	font-size:12px;
}

input.large,
select.large {
	width:100%;
	padding:4px;
	font-size:15px;
}

.form-group.error input,
.form-group.error textarea,
input.error,
textarea.error {
	border:1px solid #b94a48;
}

.form-group ul.errorlist {
	float:right;
	list-style-type:none;
	padding-left:0px;
	margin-top:2px;
	font-size:12px;
	color:#b94a48;
}

p.form-help-text {
	font-size:13px !important;
	margin-top:4px;
	margin-bottom:10px;
}

.feed-alert {
	padding:30px 19px;
	background-color:#62AFD9;
	overflow:auto;
	margin-bottom:30px;
	color:#FFF;
	font-size:17px;
	font-weight:300;
}

.feed-alert img.wiki {
	width:60px;
	float:left;
}

.feed-alert p.main {
	float:left;
	margin-left:30px;
	max-width:80%;
}

.feed-alert p.main > a.action {
	color:#FFF;
	text-decoration:underline;
}

.feed-alert a.close {
	float:right;
	font-size:22px;
	position:relative;
	transform: translateY(76%);
	display:block;	
}

/****OVERRIDE BOOTSTRAP****/

a,
span,
p,
h1,
h2,
h3,
h4,
h5,
h6 {
	margin:0px 0px 0px 0px;
	font-family: 'Roboto', sans-serif;
}

.btn {
	font-weight:700;
}

.btn-success {
	border-color:#398439 !important;
	border-bottom:2px solid #398439 !important;
}

.btn-danger {
	color:#FFF;
	background-color:#d9534f;
	text-transform:uppercase;
	text-shadow:0px 1px 1px rgba(0,0,0,0.26);
	border:1px solid #d43f3a !important;
	border-bottom:1px solid #242B30 !important;		
}

.btn-primary {
	background-color:#4A99E5;
	border:1px solid #357ebd !important;
	border-bottom:2px solid #357ebd !important;
}

.btn-clear {
	background-color:transparent;
	color:#3c3e43;
	border:1px solid #3c3e43 !important;
}

.btn-warning-wv {
	color:#FFF;
	background-color:#FFA922;
	text-transform:uppercase;
	text-shadow:0px 1px 1px rgba(0,0,0,0.26);
	border:1px solid #C57F11 !important;
	border-bottom:1px solid #242B30 !important;		
}

.btn-warning-wv:hover {
	color:#FFF;
}

.custom-share-btn {
	box-sizing:border-box;
	height:20px;
	max-width:100%;
	position:relative;
	background-color:#eee;
	background-image:-webkit-linear-gradient(#fff,#dedede);
	background-image:linear-gradient(#fff,#dedede);
	border:#ccc solid 1px;
	border-radius:3px;
	color:#333;
	font-weight:bold;
	text-shadow:0 1px 0 rgba(255,255,255,.5);
	cursor:pointer;
	max-width:98%;
	font-family:Arial;
	overflow:hidden;
	color:#333;
	font-weight:bold;
	text-shadow:0 1px 0 rgba(255,255,255,.5);
	cursor:pointer;
	padding-left:3px;
	font-size:11px;
	font-weight:700;
	line-height:19px;
	text-decoration:none;
}

.custom-share-btn:hover {
	text-decoration:none; 
}

.custom-share-btn > i.fa {
	margin-right:2px;
	color:#CA231C;
	font-size:1.2em;
}

/*****MARKDOWN STYLING*****/

.markdown-formatting {
	
}

.markdown-formatting h1 {
	font-size:21px;
}

.markdown-formatting h2 {
	font-size:19px;
}

.markdown-formatting h3,
.markdown-formatting h4,
.markdown-formatting h5,
.markdown-formatting h6 {
	font-size:17px;
}

.markdown-formatting ul, 
.markdown-formatting ol {
	margin-bottom:0px;
}

.markdown-formatting ul br,
.markdown-formatting ol br {
	display:none;
} 

.markdown-formatting code {
	color:#3c3e43;
	background-color:#EAEAEA;
	white-space:pre;
}

.markdown-formatting pre {
	border:none;
	font-size:14px;
	background-color:#EAEAEA;
	border-radius:0px;
	-moz-border-radius:0px;
	-webkit-border-radius:0px;	
}

/****POPUPS****/

.popup {
	display:none;
	position:fixed;
	z-index:9999;
	vertical-align:middle;
	margin:0 auto;
	left:0;
	right:0;
	top:100px;
	border-radius:2px;
}

.modal {
	z-index:1050px;
}

.modal .modal-body .ajax-update {
	display:none;
	text-align:center;
	font-size:18px;
	font-weight:300;
	padding:20px 0px;	
}

.modal .modal-body .ajax-update > p {
	margin-bottom:9px;
}

/*post add popup*/

#post-add-popup {
	display:none;
	position:fixed;
	overflow:auto;
	top:0;
	bottom:0;
	width:100%;
	z-index:99;
	background-color:rgba(255, 255, 255, 0.95);
	padding:50px 170px;
}

#post-add-popup > .x {
	cursor:pointer;
	position:absolute;
	z-index:999;
	top:-4px;
	left:10px;
	width:45px;
	height:58px;
	line-height:58px;
	font-size:34px;
	font-weight:700;
	text-align:center;
	color:#F4351D;
}

#post-add-popup form {
	float:left;
	width:50%;
}

#post-add-popup input,
#post-add-popup select, 
#post-add-popup textarea {
	border:1px solid #C5C5C5;
}

#post-add-popup form textarea {
	max-height:100px;
}

#post-add-popup #guidelines {
	float:right;
	width:40%;
}

#post-add-popup #guidelines p#title {
	font-size:18px;
}
/* ... */

